TAG: targetedalleleload-5-1-5-1
DATE: 10/11/2013
STAFF: sc
CHANGES: TR11455
1) this TR was mostly a migration to fix bad PIDs and messed up alleles
    caused by loading them. 
a) We added dupAllele.py to track duplicate alleles being created by the load
   this reports for ALL tal providers
b) QCReport.py - added three new columns allele PID, creation_date 
	and modification_date
2) targetedalleleload.sh - added call to dupAllele.py
3) index.html - added links to Abandoned Allele and Dup Allele reports

TAG: targetedalleleload-5-1-4-6
DATE: 08/28/2013
STAFF: sc
CHANGES: changed code from 8 char tab to 4 char for easier reading
1) KompCsdInterpreter.java
2) KompCsdProcessor.java
3) SangerInterpreter.java
4) SangerProcessor.java
5) TargetedAlleleLoad.java

TAG: targetedalleleload-5-1-4-5
DATE: 08/22/2013
STAFF: sc
CHANGES: TR11455 - add JM8A3.N1.C2 PCL to tal_common.config

TAG: targetedalleleload-5-1-4-4
DATE: 08/09/2013
STAFF: sc
CHANGES: TR11456
1) remove all changes from TR11396 - targetedalleleload-5-1-4-1
a) tal_common.config.default: KNOWN_CELLLINES='E,H,D'
b) tal_csd_mbp.config.default: ALLOWED_CELLLINES='D'
c) tal_csd_wtsi.config.default: ALLOWED_CELLLINES='E'
e) tal_eucomm_hmgu.config.default: ALLOWED_CELLLINES='H'
f) tal_eucomm_wtsi.config.default: ALLOWED_CELLLINES='E
2) log new provider info to curator log as well as diag log
a) KompCsdInterpreter.jav
b) SangerInterpreter.java
c) TargetedAlleleLoad.java

TAG: targetedalleleload-5-1-4-3
DATE: 07/29/2013
STAFF: sc
CHANGES: index.html - updated to reflect the current set of loads

TAG: targetedalleleload-5-1-4-2
DATE: 07/24/2013
STAFF: dbm
CHANGES:
1) build.xml - Use JUNIT setting instead of JAVALIB path
2) tal_common.config.default - Use STAXAPI and STAXRI setting

TAG: targetedalleleload-5-1-4-1
DATE: 07/12/2013
STAFF: sc
CHANGES: TR11396 
1. eucomm/komp csd loads- updated ALLOWED_CELLLINES
a. csd_mbp/csd_wtsi - added  'B' and 'J'
b. euccom_hmgi/eucomm/wtsi - added 'B' and 'M'
