@@ -106,6 +106,8 @@ INSTALLDIR=${TARGETEDALLELELOAD}
 export INSTALLDIR
 
 BASEDIR=${DATALOADSOUTPUT}/targetedallele
+export BASEDIR
+
 INPUTDIR=${BASEDIR}/input
 
 #
